align header logo and links correctly on style.css

--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
 
-.top {
+.top, .subtext {
     background-color: #1f2937;
     font-family: 'Roboto', 'sans-serif';
     color: #f9faf8;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    
 }
 
 .top {
     flex-direction: row;
+    padding-left: 300px;
+    padding-right: 300px;
 }
 
-.subtext {
-    flex-direction: column;
-}
-
-ul {
+li {
     list-style: none;
-    display: inline;
+    display: inline-block;
+    padding-right: 20px;
 }
